# _Msc.muon.Apuntes.2__Code_General_Theory_muones

./: -->LÉEME.txt  .gitignore  README.md
Flujo_Muones/: -->LÉEME.md  Flujo_Muones.ipynb  Flujo_Muones_y_Propiedades.ipynb  Modelos_Flujo_Muones.nb
Flujo_Muones/Aceptancia_Geo./: Aceptancia_Pixeleado.ipynb  Muon Radio Chingon Funcion.ipynb  calculo_aceptancia-Copy1.ipynb
Flujo_Muones/Flujo _Muon_C++_ROOT/: .gitignore  CMakeLists.txt  FlujoM.cpp  IntegralMuonFlux.cpp  ModGaisser.cpp
Modelo_Bethe-Bloch/: -->LÉEME.md  Bethe-Bloch dE_dx.ipynb  Bethe-Bloch_dE_dx.nb
Modelo_Bethe-Bloch/.ipynb_checkpoints/: Bethe-Bloch dE_dx Variantes-checkpoint.ipynb
Modelo_Bethe-Bloch/Calculador_Bethe-Bloch/: CMakeLists.txt  README.md
Modelo_Bethe-Bloch/Calculador_Bethe-Bloch/include/: BetheBloch.h
Modelo_Bethe-Bloch/Calculador_Bethe-Bloch/src/: BetheBloch_Example.cpp
Tomogr._Muones/: -->LÉEME.md  Tomo_Muones.nb
